    - https://sourceforge.net/p/refind/code/ci/8825e5e815b4be3708edd7b8d9fa3ea658094d3b/
  * Apparent Memory Allocation Conflict
    - https://sourceforge.net/p/refind/code/ci/5e2d0ac3fb76a8daab3a8199d0b0c52dc792b84f/
- Improves `AcquireGOP` Feature
  * Now handles uncompressed OptionROMs
  * None encountered to date but theoretically possible


0.13.3.AD (07 Mar 23):
-----------------------
- Fixes Manual Stanza SubMenuEntries
  * A memory conflict meant that including such entries resulted in RefindPlus hanging
- Fixes UGA Graphics
  * Addresses issue of `UGA-Only` GPUs being always forced into TextOnly mode
- Fixes Misc Alt Build Function Duplication Issues
  * Addresses issues reported using the build process at https://github.com/xaionaro/edk2-builder-docker
    - Updates `LodePNG` to Version 20221108
    - Deduplicates `DebugLog` function and aligns calling convention
- Fixes `Forced Default` Config Settings
  * Forced Defaults, typically based on firmware type, could be skipped under some circumstances
  * This gap has now been closed
- Fixes Invalid `ShowTools` Entry Handling
  * Such invalid entries were previously only flagged and not actually handled
  * These are now additionally skipped
- Improves `DefaultSelection` Feature
  * A substring match is now only attempted if an exact match fails
- Improves CSR Handling
  * Multiple tweaks to improve handling CSR settings
  * Removes Limitation of `DynamicCSR` Feature to Apple Firmware
  * `DynamicCSR` also now runs whenever RefindPlus is loaded and not just when specific loaders are started
- Improves `System Shutdown/Restart` Handling
  * Now displays a confirmation input screen before execution
- Improves Misc Graphics Handling
  * Improves graphics related memory management
  * Improves UGA support via new `PassGopThrough` feature (Not user configurable)
- Amends `Selection Image` Size Filtering
  * The maximum Big Selection image size is increased to 320px from 256px